[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/bat_angry.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemy/Boss/World_Boss_Giant_Bat.gd" type="Script" id=2]
[ext_resource path="res://Assets/Animations/damage_anim.tres" type="Animation" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0416

[sub_resource type="Animation" id=2]
resource_name = "Boss_Giant_Bat_Normal"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.5, 5 )

[node name="World_Boss_Giant_Bat" type="Area2D"]
position = Vector2( 0, 1 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
vframes = 3

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Animation_Player" type="AnimationPlayer" parent="."]
autoplay = "Boss_Giant_Bat_Normal"
anims/Boss_Giant_Bat_Normal = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/damage_anim = ExtResource( 3 )

[node name="Attack_Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Idle_Timer" type="Timer" parent="."]

[node name="Body_Shape" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -1 )
shape = SubResource( 4 )

[node name="Invincible_Timer" type="Timer" parent="."]

[node name="Change_Pos_Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Attack_Timer" to="." method="_on_Attack_Timer_timeout"]
[connection signal="timeout" from="Idle_Timer" to="." method="_on_Idle_Timer_timeout"]
[connection signal="timeout" from="Invincible_Timer" to="." method="_on_Invincible_Timer_timeout"]
[connection signal="timeout" from="Change_Pos_Timer" to="." method="_on_Change_Pos_Timer_timeout"]
